workloads/home-assistant/manifests/base/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: home-assistant
spec:
  redirectScheme:
    scheme: https
    permanent: true
