workloads/home-assistant/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8123
      targetPort: web
  selector:
    app: home-assistant
