workloads/home-assistant/manifests/base/ingressroute.yaml
---
# yamllint disable rule:line-length
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
  labels:
    app: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home-assistant.fh.dronen.house`)
      priority: 10
      services:
        - name: home-assistant
          port: 8123
      middlewares:
        - name: https-redirect
  tls:
    secretName: home-assistant-cert
